fix safari issue with wrapping

--- a/app/styles/modules/_modals.scss
+++ b/app/styles/modules/_modals.scss
@@ -129,6 +129,7 @@
 
   .modal__wrap {
     flex: 1 0 auto;
+    flex-wrap: nowrap;
   }
 
   .modal__header {
